--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <h1>Sravani's  Personal website home</h1>
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/blog.html">Blog</a></li>
             </ul>
